force-app/main/default/objects/pymts__Payment_Allocation__c/pymts__Payment_Allocation__c.object-meta.xml
<CustomObject>
    <description>Junction object linking transactions to invoices for payment allocation</description>
    <label>Payment Allocation</label>
    <nameField>
        <displayFormat>PA-{0000000}</displayFormat>
        <label>Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>