force-app/main/default/objects/pymts__Payment_Allocation__c/fields/pymts__Allocation_Date__c.field-meta.xml
<CustomField>
    <fullName>pymts__Allocation_Date__c</fullName>
    <label>Allocation Date</label>
    <type>Date</type>
</CustomField>