force-app/main/default/objects/pymts__Payment_Allocation__c/fields/pymts__Invoice__c.field-meta.xml
<CustomField>
    <fullName>pymts__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The invoice this payment is allocated to</description>
    <label>Invoice</label>
    <referenceTo>pymts__Invoice__c</referenceTo>
    <relationshipLabel>Payment Allocations</relationshipLabel>
    <relationshipName>Payment_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>