force-app/main/default/objects/pymts__Payment_Allocation__c/fields/pymts__Transaction__c.field-meta.xml
<CustomField>
    <fullName>pymts__Transaction__c</fullName>
    <description>The transaction this allocation belongs to</description>
    <label>Transaction</label>
    <referenceTo>pymts__Transaction__c</referenceTo>
    <relationshipLabel>Payment Allocations</relationshipLabel>
    <relationshipName>Payment_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>